--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     working_dir: /var/www
     restart: on-failure
     depends_on:
+      - liateam-webserver
+      - redis
       - db
     volumes:
       - ./:/var/www
