added order and products apis using design pattern and added tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - app-network
     volumes:
       - mongodbdata:/data/db
+    command: [ "mongod", "--replSet", "rs0" ]
 
   cache:
     image: redis:alpine
